name:                csv2json
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/csv2json#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CSV2JSON
  build-depends:       base >= 4.7 && < 5
                     , csv-conduit
                     , bytestring
                     , vector
                     , aeson
                     , scientific
                     , text
                     , insert-ordered-containers
  default-language:    Haskell2010

executable csv2json
  hs-source-dirs:      src-commandline
  main-is:             Main.hs
  ghc-options:        -fwarn-unused-imports -O3 -optc-Os
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , csv2json
                     , bytestring

source-repository head
  type:     git
  location: https://github.com/stla/csv2json
